S13nSW: Implement ServiceWorkerSubresourceLoaderFactory::Clone()

To support Clone(), an instance of ServiceWorkerSubresourceLoaderFactory
needs to maintain more than one bindings. Use BindingSet to handle
multiple bindings. This is similar approach to BlobURLLoaderFactory.

Bug: 827051
Change-Id: I17f46accd3a66160d19d01aea1cb026a3fb999be
Reviewed-on: https://chromium-review.googlesource.com/987218
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547115}
Former-commit-id: c2d27c03b7e6431eccc04d0de79a0e5c5899625f