content/renderer/service_worker/service_worker_subresource_loader.h
@@ -14,6 +14,7 @@
 #include "content/common/service_worker/service_worker_status_code.h"
 #include "content/renderer/service_worker/controller_service_worker_connector.h"
 #include "mojo/public/cpp/bindings/binding.h"
+#include "mojo/public/cpp/bindings/binding_set.h"
 #include "net/traffic_annotation/network_traffic_annotation.h"
 #include "net/url_request/redirect_info.h"
 #include "services/network/public/mojom/url_loader_factory.mojom.h"
@@ -155,6 +156,7 @@ class CONTENT_EXPORT ServiceWorkerSubresourceLoader
 // S13nServiceWorker:
 // A custom URLLoaderFactory implementation used by Service Worker controllees
 // for loading subresources via the controller Service Worker.
+// Self destroys when no more bindings exist.
 class CONTENT_EXPORT ServiceWorkerSubresourceLoaderFactory
     : public network::mojom::URLLoaderFactory {
  public:
@@ -164,9 +166,10 @@ class CONTENT_EXPORT ServiceWorkerSubresourceLoaderFactory
   // default URLLoaderFactory for network fallback. This should be the
   // URLLoaderFactory that directly goes to network without going through
   // any custom URLLoader factories.
-  ServiceWorkerSubresourceLoaderFactory(
+  static void Create(
       scoped_refptr<ControllerServiceWorkerConnector> controller_connector,
-      scoped_refptr<network::SharedURLLoaderFactory> network_loader_factory);
+      scoped_refptr<network::SharedURLLoaderFactory> network_loader_factory,
+      network::mojom::URLLoaderFactoryRequest request);
 
   ~ServiceWorkerSubresourceLoaderFactory() override;
 
@@ -182,11 +185,20 @@ class CONTENT_EXPORT ServiceWorkerSubresourceLoaderFactory
   void Clone(network::mojom::URLLoaderFactoryRequest request) override;
 
  private:
+  ServiceWorkerSubresourceLoaderFactory(
+      scoped_refptr<ControllerServiceWorkerConnector> controller_connector,
+      scoped_refptr<network::SharedURLLoaderFactory> network_loader_factory,
+      network::mojom::URLLoaderFactoryRequest request);
+
+  void OnConnectionError();
+
   scoped_refptr<ControllerServiceWorkerConnector> controller_connector_;
 
   // A URLLoaderFactory that directly goes to network, used when a request
   // falls back to network.
   scoped_refptr<network::SharedURLLoaderFactory> network_loader_factory_;
+
+  mojo::BindingSet<network::mojom::URLLoaderFactory> bindings_;
 
   DISALLOW_COPY_AND_ASSIGN(ServiceWorkerSubresourceLoaderFactory);
 };
