content/renderer/service_worker/service_worker_subresource_loader_unittest.cc
@@ -357,14 +357,16 @@ class ServiceWorkerSubresourceLoaderTest : public ::testing::Test {
         std::move(fake_loader_factory));
   }
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory>
-  CreateSubresourceLoaderFactory() {
+  network::mojom::URLLoaderFactoryPtr CreateSubresourceLoaderFactory() {
     if (!connector_) {
       connector_ = base::MakeRefCounted<ControllerServiceWorkerConnector>(
           &fake_container_host_);
     }
-    return std::make_unique<ServiceWorkerSubresourceLoaderFactory>(
-        connector_, loader_factory_);
+    network::mojom::URLLoaderFactoryPtr service_worker_url_loader_factory;
+    ServiceWorkerSubresourceLoaderFactory::Create(
+        connector_, loader_factory_,
+        mojo::MakeRequest(&service_worker_url_loader_factory));
+    return service_worker_url_loader_factory;
   }
 
   // Starts |request| using |loader_factory| and sets |out_loader| and
@@ -373,7 +375,7 @@ class ServiceWorkerSubresourceLoaderTest : public ::testing::Test {
   // completion. Calling fake_controller_->RunUntilFetchEvent() also advances
   // the load to until |fake_controller_| receives the fetch event.
   void StartRequest(
-      ServiceWorkerSubresourceLoaderFactory* loader_factory,
+      const network::mojom::URLLoaderFactoryPtr& loader_factory,
       const network::ResourceRequest& request,
       network::mojom::URLLoaderPtr* out_loader,
       std::unique_ptr<network::TestURLLoaderClient>* out_loader_client) {
@@ -420,7 +422,7 @@ class ServiceWorkerSubresourceLoaderTest : public ::testing::Test {
   void RunFallbackWithRequestBodyTest(
       scoped_refptr<network::ResourceRequestBody> request_body,
       const std::string& expected_body) {
-    std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+    network::mojom::URLLoaderFactoryPtr factory =
         CreateSubresourceLoaderFactory();
 
     // Create a request with the body.
@@ -436,7 +438,7 @@ class ServiceWorkerSubresourceLoaderTest : public ::testing::Test {
     // Perform the request.
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     client->RunUntilComplete();
 
     // Verify that the request body was passed to the fetch event.
@@ -462,13 +464,13 @@ class ServiceWorkerSubresourceLoaderTest : public ::testing::Test {
 };
 
 TEST_F(ServiceWorkerSubresourceLoaderTest, Basic) {
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
   network::ResourceRequest request =
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   fake_controller_.RunUntilFetchEvent();
 
   EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -480,7 +482,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, Basic) {
 TEST_F(ServiceWorkerSubresourceLoaderTest, Abort) {
   fake_controller_.AbortEventWithNoResponse();
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -488,21 +490,21 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, Abort) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilComplete();
 
   EXPECT_EQ(net::ERR_FAILED, client->completion_status().error_code);
 }
 
 TEST_F(ServiceWorkerSubresourceLoaderTest, DropController) {
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
   {
     network::ResourceRequest request =
         CreateRequest(GURL("https://www.example.com/foo.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -519,7 +521,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController) {
         CreateRequest(GURL("https://www.example.com/foo2.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -538,7 +540,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController) {
         CreateRequest(GURL("https://www.example.com/foo3.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -549,14 +551,14 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController) {
 }
 
 TEST_F(ServiceWorkerSubresourceLoaderTest, NoController) {
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
   {
     network::ResourceRequest request =
         CreateRequest(GURL("https://www.example.com/foo.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -575,7 +577,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, NoController) {
         CreateRequest(GURL("https://www.example.com/foo2.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     client->RunUntilComplete();
 
     EXPECT_TRUE(client->has_received_completion());
@@ -587,7 +589,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, NoController) {
 }
 
 TEST_F(ServiceWorkerSubresourceLoaderTest, DropController_RestartFetchEvent) {
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   {
@@ -595,7 +597,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController_RestartFetchEvent) {
         CreateRequest(GURL("https://www.example.com/foo.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -612,7 +614,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController_RestartFetchEvent) {
         CreateRequest(GURL("https://www.example.com/foo2.png"));
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     fake_controller_.RunUntilFetchEvent();
 
     EXPECT_EQ(request.url, fake_controller_.fetch_event_request().url);
@@ -625,7 +627,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController_RestartFetchEvent) {
       CreateRequest(GURL("https://www.example.com/foo3.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
 
   // Drop the connection to the ControllerServiceWorker.
   fake_controller_.CloseAllBindings();
@@ -643,13 +645,13 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, DropController_TooManyRestart) {
   // Simulate the container host fails to start a service worker.
   fake_container_host_.set_fake_controller(nullptr);
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
   network::ResourceRequest request =
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
 
   // Try to dispatch fetch event to the bad worker.
   base::RunLoop().RunUntilIdle();
@@ -669,7 +671,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, StreamResponse) {
   fake_controller_.RespondWithStream(mojo::MakeRequest(&stream_callback),
                                      std::move(data_pipe.consumer_handle));
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -677,7 +679,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, StreamResponse) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilResponseReceived();
 
   const network::ResourceResponseHead& info = client->response_head();
@@ -711,7 +713,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, StreamResponse_Abort) {
   fake_controller_.RespondWithStream(mojo::MakeRequest(&stream_callback),
                                      std::move(data_pipe.consumer_handle));
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -719,7 +721,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, StreamResponse_Abort) {
       CreateRequest(GURL("https://www.example.com/foo.txt"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilResponseReceived();
 
   const network::ResourceResponseHead& info = client->response_head();
@@ -750,7 +752,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, StreamResponse_Abort) {
 TEST_F(ServiceWorkerSubresourceLoaderTest, FallbackResponse) {
   fake_controller_.RespondWithFallback();
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -758,7 +760,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, FallbackResponse) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilComplete();
 
   // OnFallback() should complete the network request using network loader.
@@ -769,7 +771,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, FallbackResponse) {
 TEST_F(ServiceWorkerSubresourceLoaderTest, ErrorResponse) {
   fake_controller_.RespondWithError();
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -777,7 +779,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, ErrorResponse) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilComplete();
 
   EXPECT_EQ(net::ERR_FAILED, client->completion_status().error_code);
@@ -786,7 +788,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, ErrorResponse) {
 TEST_F(ServiceWorkerSubresourceLoaderTest, RedirectResponse) {
   fake_controller_.RespondWithRedirect("https://www.example.com/bar.png");
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -794,7 +796,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, RedirectResponse) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
   client->RunUntilRedirectReceived();
 
   EXPECT_EQ(net::OK, client->completion_status().error_code);
@@ -862,7 +864,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, TooManyRedirects) {
       std::string("https://www.example.com/redirect_") +
       base::IntToString(count);
   fake_controller_.RespondWithRedirect(redirect_location);
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   // Perform the request.
@@ -870,7 +872,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, TooManyRedirects) {
       CreateRequest(GURL("https://www.example.com/foo.png"));
   network::mojom::URLLoaderPtr loader;
   std::unique_ptr<network::TestURLLoaderClient> client;
-  StartRequest(factory.get(), request, &loader, &client);
+  StartRequest(factory, request, &loader, &client);
 
   // The Fetch spec says: "If request’s redirect count is twenty, return a
   // network error." https://fetch.spec.whatwg.org/#http-redirect-fetch
@@ -907,7 +909,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, TooManyRedirects) {
 TEST_F(ServiceWorkerSubresourceLoaderTest, CORSFallbackResponse) {
   fake_controller_.RespondWithFallback();
 
-  std::unique_ptr<ServiceWorkerSubresourceLoaderFactory> factory =
+  network::mojom::URLLoaderFactoryPtr factory =
       CreateSubresourceLoaderFactory();
 
   struct TestCase {
@@ -961,7 +963,7 @@ TEST_F(ServiceWorkerSubresourceLoaderTest, CORSFallbackResponse) {
     request.request_initiator = test.request_initiator;
     network::mojom::URLLoaderPtr loader;
     std::unique_ptr<network::TestURLLoaderClient> client;
-    StartRequest(factory.get(), request, &loader, &client);
+    StartRequest(factory, request, &loader, &client);
     client->RunUntilResponseReceived();
 
     const network::ResourceResponseHead& info = client->response_head();
